fix issue with bad text wrapping on stepped list titles

--- a/static/sass/_pattern_lists.scss
+++ b/static/sass/_pattern_lists.scss
@@ -155,6 +155,7 @@
   // XXX Scott - 19 August 2019
   // This block can be removed when the following issue is resolved:
   // https://github.com/canonical-web-and-design/vanilla-framework/issues/2489
+  h3.p-stepped-list__title, //sass-lint:disable-line no-qualifying-elements
   p.p-stepped-list__title { //sass-lint:disable-line no-qualifying-elements
     display: inline-block;
     padding-left: 2rem;
@@ -164,6 +165,22 @@
       display: inline-block;
       left: 0;
       position: absolute;
+      width: 1.5rem;
+    }
+  }
+
+  h3.p-stepped-list__title { //sass-lint:disable-line no-qualifying-elements
+    padding-left: 3rem;
+
+    &::before {
+      width: 2rem;
+    }
+  }
+
+  p.p-stepped-list__title { //sass-lint:disable-line no-qualifying-elements
+    padding-left: 2rem;
+
+    &::before {
       width: 1.5rem;
     }
   }
